force-app/main/default/objects/Account/fields/bikeCount__c.field-meta.xml
<CustomField>
    <fullName>bikeCount__c</fullName>
    <label>bikeCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>