force-app/main/default/objects/Account/fields/FriendCount__c.field-meta.xml
<CustomField>
    <fullName>FriendCount__c</fullName>
    <label>FriendCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>