force-app/main/default/objects/Account/fields/numberOfBikes__c.field-meta.xml
<CustomField>
    <fullName>numberOfBikes__c</fullName>
    <label>numberOfBikes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>