force-app/main/default/objects/Account/fields/NumberOfCars__c.field-meta.xml
<CustomField>
    <fullName>NumberOfCars__c</fullName>
    <label>NumberOfCars</label>
    <type>AutoNumber</type>
</CustomField>