force-app/main/default/objects/Account/fields/numberOfPens__c.field-meta.xml
<CustomField>
    <fullName>numberOfPens__c</fullName>
    <label>numberOfPens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>