force-app/main/default/objects/Account/fields/TestCounterForAccount__c.field-meta.xml
<CustomField>
    <fullName>TestCounterForAccount__c</fullName>
    <label>TestCounterForAccount</label>
    <type>AutoNumber</type>
</CustomField>